tests/expected/task-1/err-doubledecl-1.uc.out
---
test: run suites/task-1/err-doubledecl-1.uc
---
suites/task-1/err-doubledecl-1.uc:3:7: semantic error: identifier 'q' already declared ([2:11])
    var q; // error: identifier already declared
        ^


exit: 1
